# mob-with-friends

mob-with-friends/: bleedthorn.gdextension  project.godot
mob-with-friends/scenes/: gameplay.tscn
mob-with-friends/scenes/constructions/: wall.tscn
res/: bleedthorn.gdextension.uid  icon.svg.import  project.godot
res/scenes/: building.tscn  building_floor.tscn  building_manager.tscn  construction_manager.tscn
res/scenes/constructions/: Floor.tscn  construction.tscn
res/scenes/gui/: world_gen.tscn
res/scripts/: building.gd  building.gd.uid  building_floor.gd  building_floor.gd.uid  building_manager.gd  building_manager.gd.uid  construction_manager.gd  construction_manager.gd.uid  gameplay.gd.uid  worldgen_camera.gd  worldgen_camera.gd.uid
res/scripts/constructions/: construction.gd  construction.gd.uid
res/scripts/gui/: world_gen.gd  world_gen.gd.uid
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: building.rs  construction.rs  flt.rs  item.rs  lib.rs  map.rs  material.rs  statistics.rs
