[package]
name = "bleedthorn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "bleedthorn"
doctest = false

[[bin]]
name = "gen"
path = "bin/gen.rs"
test = false

[dependencies]
godot = { version = "0.4.5", features = ["api-4-5", "serde"] }
libloading = "0.9.0"
rand = { version = "0.10.1", features = ["unbiased"] }
trace = "0.1.7"
